allow local jpx as input argument e.g. -jpx "file:///Users/freekv/JHelioviewer/Downloads/AIA171.jpx"
git-svn-id: svn+ssh://solsvn.oma.be/home/sidc/ssr/SWHV_repos/trunk/client/jhv-3d-wcs@979 b4e469a2-07ce-4b26-9273-4d7d95a670c7